pull-7549/netv1-manuelpr/ingress.yml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"networkingv1beta1","namespace":"default"},"spec":{"ingressClassName":"networkingv1beta1","rules":[{"host":"whoami.localhost","http":{"paths":[{"backend":{"serviceName":"whoami","servicePort":80},"path":"/netv1beta1"}]}}]}}
    creationTimestamp: "2021-03-09T15:23:12Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1beta1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:spec:
          f:ingressClassName: {}
          f:rules: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: "2021-03-09T15:23:12Z"
    name: networkingv1beta1
    namespace: default
    resourceVersion: "524"
    uid: af9991bf-2197-4bc8-a213-7613da34aecc
  spec:
    ingressClassName: networkingv1beta1
    rules:
    - host: whoami.localhost
      http:
        paths:V
        - backend:
            service:
              name: whoami
              port:
                number: 80
          path: /netv1beta1
          pathType: ImplementationSpecific
  status:
    loadBalancer: {}
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"networkingv1","namespace":"default"},"spec":{"ingressClassName":"networkingv1","rules":[{"host":"whoami.localhost","http":{"paths":[{"backend":{"service":{"name":"whoami","port":{"number":80}}},"path":"/netv1","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2021-03-09T15:23:12Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:spec:
          f:ingressClassName: {}
          f:rules: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: "2021-03-09T15:23:12Z"
    name: networkingv1
    namespace: default
    resourceVersion: "527"
    uid: 2542623e-5cd2-4f5d-8c97-c101b6c5bf48
  spec:
    ingressClassName: networkingv1
    rules:
    - host: whoami.localhost
      http:
        paths:
        - backend:
            service:
              name: whoami
              port:
                number: 80
          path: /netv1
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
